data/derived/comb/progs/unify/prog3777.ml.out
Characters 16-17:
  let _ = f [] (9;2);;
                  ^
Error: This expression has type int but an expression was expected of type
         int * int
